Add CORS configuration and enable server compression in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.zpdqbcr.mongodb.net/p
 #spring.data.mongodb.host=localhost
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=productdb
+
+# transferred over the network, improving performance, especially for JSON responses.
+server.compression.enabled=true
